--- a/angular.json
+++ b/angular.json
@@ -26,9 +26,7 @@
             "outputPath": "dist/gym-dashboard",
             "index": "src/index.html",
             "browser": "src/main.ts",
-            "polyfills": [
-              "zone.js"
-            ],
+            "polyfills": ["zone.js"],
             "tsConfig": "tsconfig.app.json",
             "assets": [
               {
@@ -37,7 +35,9 @@
               }
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "node_modules/@syncfusion/ej2-angular-navigations/styles/material.css",
+              "node_modules/@syncfusion/ej2-angular-lists/styles/material.css"
             ],
             "scripts": []
           },
@@ -83,10 +83,7 @@
         "test": {
           "builder": "@angular-devkit/build-angular:karma",
           "options": {
-            "polyfills": [
-              "zone.js",
-              "zone.js/testing"
-            ],
+            "polyfills": ["zone.js", "zone.js/testing"],
             "tsConfig": "tsconfig.spec.json",
             "assets": [
               {
@@ -95,7 +92,9 @@
               }
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "node_modules/@syncfusion/ej2-angular-navigations/styles/material.css",
+              "node_modules/@syncfusion/ej2-angular-lists/styles/material.css"
             ],
             "scripts": []
           }
