authentication & user-data

--- a/package.json
+++ b/package.json
@@ -20,7 +20,11 @@
     "@angular/router": "^18.2.0",
     "@syncfusion/ej2-angular-lists": "^27.2.2",
     "@syncfusion/ej2-angular-navigations": "^27.2.2",
+    "@types/gapi": "^0.0.47",
+    "@types/gapi.auth2": "^0.0.61",
     "apexcharts": "^3.54.1",
+    "gapi": "^0.0.3",
+    "gapi-script": "^1.2.0",
     "ng-apexcharts": "^1.12.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
